<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="nano_degree">My Nano Degree Apps!</string>

    <!-- button texts -->
    <string name="popular_movies">popular movies</string>
    <string name="stock_hawks">stock hawks</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="make_your_app_material">make your app material</string>
    <string name="go_ubiquitous">go ubiquitous</string>
    <string name="capstone">capstone</string>

    <!-- Package Names for apps -->
    <string name="bioscope">za.co.gundula.app.bioscope</string>
    <string name="stockhawk">com.gundula.android.stockhawk</string>
    <string name="builditbigger">com.udacity.gradle.builditbigger</string>
    <string name="makeyourappmaterial">com.example.xyzreader</string>
</resources>
