<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.gundula.app.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/app_nano_degree"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/nano_degree" />

        <Button
            android:id="@+id/popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/popular_movies"
            android:onClick="projectButtonClick" />

        <Button
            android:id="@+id/stock_hawk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/stock_hawks"
            android:onClick="projectButtonClick" />

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/build_it_bigger"
            android:onClick="projectButtonClick" />

        <Button
            android:id="@+id/make_your_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/make_your_app_material"
            android:onClick="projectButtonClick" />

        <Button
            android:id="@+id/go_ubiquitous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/go_ubiquitous"
            android:onClick="projectButtonClick" />

        <Button
            android:id="@+id/capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonText"
            android:text="@string/capstone"
            android:onClick="projectButtonClick" />
    </LinearLayout>
</ScrollView>
